App #575: avoided scrollbar during menu collapse animation

--- a/prototypes/app/source/css/components/AppNav.styl
+++ b/prototypes/app/source/css/components/AppNav.styl
@@ -51,6 +51,11 @@
             // iOS7-8.1 requires a explicit z-index:
             z-index: 300;
         }
+    
+        > .navbar-collapse.collapsing {
+            // Avoid scrollbar during animation
+            overflow: hidden;
+        }
         
         // Customization of Bootstrap navigation bar for use as menus
         .nav {
